# api/openapi.yaml
@@ -124,9 +124,9 @@ paths:
 
   /api/v1/device/{deviceid}/feature:
     put:
-      summary: "Upsert device feature"
-      description: "Creates or updates a device feature for the specified device"
-      operationId: "upsertDeviceFeature"
+      summary: "Update device feature"
+      description: "Updates a device feature for the specified device"
+      operationId: "updateDeviceFeature"
       tags:
         - "Device Feature"
       parameters:
